force-app/main/default/objects/Navigation_Carousel_Item__c/Navigation_Carousel_Item__c.object-meta.xml
<CustomObject>
    <label>Navigation Carousel Item</label>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Navigation Carousel Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>