force-app/main/default/objects/Navigation_Carousel_Item__c/fields/Id_Parameter__c.field-meta.xml
<CustomField>
    <fullName>Id_Parameter__c</fullName>
    <label>Id Parameter</label>
    <length>25</length>
    <type>Text</type>
</CustomField>