force-app/main/default/objects/Navigation_Carousel_Item__c/fields/Image_Path__c.field-meta.xml
<CustomField>
    <fullName>Image_Path__c</fullName>
    <label>Image Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>