force-app/main/default/objects/Navigation_Carousel_Item__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>Label that will appear in the navigation carousel for this item</description>
    <inlineHelpText>Label that will appear in the navigation carousel for this item</inlineHelpText>
    <label>Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>