force-app/main/default/objects/Navigation_Carousel_Item__c/fields/Navigation_Carousel__c.field-meta.xml
<CustomField>
    <fullName>Navigation_Carousel__c</fullName>
    <label>Navigation Carousel</label>
    <referenceTo>Navigation_Carousel__c</referenceTo>
    <relationshipLabel>Navigation Carousel Items</relationshipLabel>
    <relationshipName>Navigation_Carousel_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>