force-app/main/default/objects/Navigation_Carousel_Item__c/fields/Parameter__c.field-meta.xml
<CustomField>
    <fullName>Parameter__c</fullName>
    <description>Type: Value
Home: (Leave blank)
Object: API name of the object
Page: name of the page
Topic: Topic Nam</description>
    <inlineHelpText>Type: Value
Home: (Leave blank)
Object: API name of the object
Page: name of the page
Topic: Topic Nam</inlineHelpText>
    <label>Name Parameter</label>
    <length>100</length>
    <type>Text</type>
</CustomField>