force-app/main/default/objects/Navigation_Carousel_Item__c/recordTypes/Home.recordType-meta.xml
<RecordType>
    <fullName>Home</fullName>
    <active>true</active>
    <description>Indicates a link to the Home Page</description>
    <label>Home</label>
</RecordType>