force-app/main/default/objects/Navigation_Carousel_Item__c/recordTypes/Object.recordType-meta.xml
<RecordType>
    <fullName>Object</fullName>
    <active>true</active>
    <description>indicates a link to an object page</description>
    <label>Object</label>
</RecordType>