force-app/main/default/objects/Navigation_Carousel_Item__c/recordTypes/Page.recordType-meta.xml
<RecordType>
    <fullName>Page</fullName>
    <active>true</active>
    <description>indicates a link to a specific page</description>
    <label>Page</label>
</RecordType>