force-app/main/default/objects/Navigation_Carousel_Item__c/recordTypes/Topic.recordType-meta.xml
<RecordType>
    <fullName>Topic</fullName>
    <active>true</active>
    <description>indicates a link to a Topic</description>
    <label>Topic</label>
</RecordType>